The review refresher is now in an azure function with a trigger. Trigger is currently set to high interval (yearly). Switch to higher frequency later.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "azureFunctions.deploySubpath": "functions",
+    "azureFunctions.deploySubpath": "azure_functions",
     "azureFunctions.scmDoBuildDuringDeployment": true,
     "azureFunctions.projectLanguage": "Python",
     "azureFunctions.projectRuntime": "~4",
@@ -7,5 +7,6 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "azureFunctions.pythonVenv": ".venv"
 }
